@@ -1,3 +1,9 @@
+2014-07-03  Roland Levillain  <roland@lrde.epita.fr>
+
+	Disable some tests depending on Poppler for compatibility reasons.
+
+	* tests/io/pdf/load.cc: Here.
+
 2014-07-02  Roland Levillain  <roland@lrde.epita.fr>
 
 	Add a NEWS file to Milena.
